通过视频实现的引导页轮播原理

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     <me.wangyuwei.liulishuopreview.PreviewVideoView
         android:id="@+id/vv_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="100dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_image"
